--- a/lab5_nash.html
+++ b/lab5_nash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="CSS_NASH.css">
+	<link rel="stylesheet" href="CSS_Nash.css">
     <title>SDG 3: Good Health and Well-being</title>
 </head>
 <body>
